# icd_nyc_taxi_prediction

./: .gitignore  Makefile  README.md  pyproject.toml  pyproject.toml.backup
.github/workflows/: feature_pipeline.yml  inference_pipeline.yml  training_pipeline.yml
scripts/: backfill_feature_group.py  backfill_inference.py  training_pipeline.py
src/: config.py  data.py  data_split.py  discord.py  feature_store_api.py  frontend.py  frontend_monitoring.py  inference.py  logger.py  model.py  model_registry_api.py  paths.py  plot.py
