[project]
name = "nyc-taxi-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "comet-ml==3.35.3",
    "discordwebhook==1.0.3",
    "fire==0.5.0",
    "geopandas==0.14.0",
    "jupyter==1.0.0",
    "optuna==3.4.0",
    "pandas==1.5.2",
    "plotly==5.11.0",
    "pyarrow==10.0.1",
    "pydeck==0.8.0",
    "python-dotenv==1.0.0",
    "requests==2.28.1",
    "retry==0.9.2",
    "scikit-learn==1.3.1",
    "streamlit==1.27.2",
    "tqdm==4.64.1",
    "xgboost==2.0.0",
]

[dependency-groups]
dev = [
    "pip-tools==6.12.3",
    "pytest==5.2",
    "watchdog==2.2.1",
]
